--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # REACT_APP_API=http://localhost:8800/api
-VITE__API=https://bookingbackend-production-36e0.up.railway.app/api
+VITE_API=https://bookingbackend-production-36e0.up.railway.app/api
